# FlashGen

./: .gitignore  README.md  collect_env.py  pyproject.toml
docs/: DMD蒸馏算法实现.md  架构设计.md
flashgen/: __init__.py  envs.py  fastvideo_args.py  flashgen_args.py  forward_context.py  image_processor.py  logger.py  profiler.py  registry.py  utils.py
flashgen/api/: __init__.py  compat.py  overrides.py  parser.py  presets.py  request_metadata.py  results.py  sampling_param.py  schema.py
flashgen/attention/: __init__.py  layer.py  selector.py
flashgen/attention/backends/: abstract.py  sdpa.py
flashgen/configs/: AGENTS.md  configs.py
flashgen/configs/models/: __init__.py  base.py
flashgen/configs/models/dits/: __init__.py  base.py  wanvideo.py
flashgen/configs/models/encoders/: __init__.py  base.py  t5.py
flashgen/configs/models/vaes/: __init__.py  base.py  wanvae.py
flashgen/configs/pipelines/: __init__.py  base.py  wan.py
flashgen/dataset/: __init__.py  parquet_dataset_map_style.py  validation_dataset.py
flashgen/dataset/dataloader/: schema.py
flashgen/distributed/: __init__.py  communication_op.py  parallel_state.py  utils.py
flashgen/distributed/device_communicators/: npu_communicator.py  pyhccl.py  pyhccl_wrapper.py
flashgen/entrypoints/: streaming_generator.py  video_generator.py
flashgen/entrypoints/cli/: bench_serving.py  cli_types.py  generate.py  inference_config.py  main.py  utils.py
flashgen/hooks/: activation_trace.py  layerwise_offload.py
flashgen/layers/: AGENTS.md  activation.py  custom_op.py  layernorm.py  linear.py  mlp.py  rotary_embedding.py  visual_embedding.py  vocab_parallel_embedding.py
flashgen/layers/lora/: linear.py
flashgen/layers/quantization/: __init__.py  absmax_fp8.py  base_config.py
flashgen/logging_utils/: __init__.py
flashgen/models/: AGENTS.md  hf_transformer_utils.py  parameter.py  registry.py  utils.py
flashgen/models/dits/: base.py  wanvideo.py
flashgen/models/encoders/: base.py  t5.py
flashgen/models/loader/: component_loader.py  fsdp_load.py  utils.py  weight_utils.py
flashgen/models/schedulers/: scheduling_flow_match_euler_discrete.py
flashgen/models/vaes/: common.py  wanvae.py
flashgen/pipelines/: AGENTS.md  README.md  __init__.py  composed_pipeline_base.py  lora_pipeline.py  pipeline_batch_info.py  pipeline_registry.py
flashgen/pipelines/basic/wan/: presets.py  wan_dmd_pipeline.py
flashgen/pipelines/stages/: __init__.py  base.py  conditioning.py  decoding.py  denoising.py  image_encoding.py  input_validation.py  latent_preparation.py  text_encoding.py  timestep_preparation.py
flashgen/train/: AGENTS.md  README.md  __init__.py  trainer.py
flashgen/train/callbacks/: __init__.py  callback.py  ema.py  grad_clip.py
flashgen/train/entrypoint/: dcp_to_diffusers.py  train.py
flashgen/train/entrypoint/misc/: wan_ode_init_conversion.py
flashgen/train/methods/: __init__.py  base.py
flashgen/train/methods/distribution_matching/: __init__.py  dmd2.py
flashgen/train/models/: base.py
flashgen/train/models/wan/: __init__.py  wan.py
flashgen/train/utils/: builder.py  checkpoint.py  config.py  dataloader.py  instantiate.py  lora.py  moduleloader.py  optimizer.py  tracking.py  training_config.py
flashgen/training/: AGENTS.md  __init__.py  checkpointing_utils.py  distillation_pipeline.py  trackers.py  training_pipeline.py  training_utils.py  wan_distillation_pipeline.py
flashgen/worker/: executor.py  gpu_worker.py  multiproc_executor.py  ray_distributed_executor.py  ray_env.py  ray_utils.py  worker_base.py
scripts/distill/: v1_distill_dmd_wan.sh  wan_dmd_npu.yaml
scripts/export/: export_wan_dmd_transformer.py
scripts/inference/: README.md  inference_wan_DMD_1_3B.yaml
