[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flashgen"
version = "0.1.7"
description = "Flashgen NPU FastWan DMD distillation training runtime"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "scipy==1.14.1",
    "six==1.16.0",
    "h5py==3.12.1",
    "requests>=2.32.2",

    "transformers==4.57.3",
    "tokenizers>=0.20.1",
    "sentencepiece==0.2.0",
    "timm==1.0.11",
    "peft>=0.15.0",
    "diffusers>=0.33.1",
    "torch==2.11.0",
    "torchvision",
    "accelerate==1.0.1",

    "opencv-python==4.10.0.84",
    "pillow>=10.3.0",
    "imageio==2.36.0",
    "imageio-ffmpeg==0.5.1",
    "einops",
    "safetensors",

    "wandb>=0.21.0",
    "loguru",
    "tqdm",
    "PyYAML==6.0.1",
    "protobuf>=5.28.3",
    "huggingface_hub",
    "cloudpickle",
    "omegaconf",

    "wheel",

    "torchdata",
    "pyarrow",
    "av",
]

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.optional-dependencies]

lint = [
    "pre-commit==4.0.1",
    "types-requests",
]

test = [
    "av",
    "pytorch-msssim==1.0.0",
    "pytest",
    "pandas",
    "plotly",
]

dev = [ "flashgen[lint]", "flashgen[test]", ]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["assets*", "docker*", "docs", "scripts*", "apps*"]

[tool.wheel]
exclude = ["assets*", "docker*", "docs", "scripts*", "apps*"]

[tool.pytest.ini_options]
markers = [
    "gpu: requires real GPU + model weights; skip in CI",
]


[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_calls = true
check_untyped_defs = true
follow_imports = "silent"

[tool.codespell]
# ``*/_vendored/*`` matches upstream-provenance files vendored under any
# ``_vendored/`` subdir (project-wide convention; mirrors the
# ``_``-prefixed auto-discovery skip).
skip = "./data,./wandb,ui/package-lock.json,*/_vendored/*"
# "tread" matches daVinci-MagiHuman's acronym "TReAD" (Token Routing and
# Early Drop). codespell lowercases ignore-words entries, so the single
# lowercase form silences all case variants.
ignore-words-list = "tread,passt"

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120
extend-exclude = [
    # Upstream submodules under flashgen/third_party/ are not our style
    # territory; modern-dep compat lives as runtime shims in our metric
    # __init__.py files.
    "flashgen/third_party/**",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    # "I",
    "G",
]
ignore = [
    # star imports
    "F405", "F403",
    # lambda expression assignment
    "E731",
    # Loop control variable not used within loop body
    "B007",
    # f-string format
    "UP032",
    # line too long
    "E501",
]

[tool.yapf]
column_limit = 120

[tool.isort]
line_length = 120
use_parentheses = true
skip_gitignore = true


[project.urls]
Repository = "https://github.com/hao-ai-lab/Flashgen"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "flashgen"
DisplayName = "Flashgen"
Icon = "https://raw.githubusercontent.com/hao-ai-lab/Flashgen/main/comfyui/assets/icon_simple.svg"
